<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="home_logo_content_description">Logo Voting hand</string>
    <string name="btn_upcoming_elections">Upcoming Elections</string>
    <string name="btn_find_representatives">Find My Representatives</string>
    <string name="title_upcoming_elections">Upcoming Elections</string>
    <string name="title_saved_elections">Saved Elections</string>
    <string name="text_election_info">Election State: %s</string>
    <string name="text_voting_location">Voting Location</string>
    <string name="text_ballot_information">Ballot Information</string>
    <string name="text_follow_election">Follow</string>
    <string name="text_unfollow_election">Unfollow</string>
    <string name="msg_no_web_browser_found">No web browser found</string>
    <string name="representative_search_text">Representative Search</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="address_line_2_text">Address Line 2</string>
    <string name="city_text">City</string>
    <string name="zip_text">Zip</string>
    <string name="find_my_representatives_text">Find My Representatives</string>
    <string name="use_my_location_text">Use My Location</string>
    <string name="my_representatives_text">My Representatives</string>
    <string name="location_required_error_msg">Location Permission required</string>
</resources>
